# dockers

./: Justfile  PATCHES.md  README.md  patches.toml
agent-browser/: Dockerfile  entrypoint.sh
bifrost-dynamic/: Dockerfile
bifrost-dynamic/embedding-task-prefix/: go.mod  main.go  main_test.go
bifrost-dynamic/normalizer/: go.mod  main.go
bifrost-dynamic/patches/: PATCHES.md  add-reasoning-content-field.patch  allow-custom-provider-vk-wildcard.patch  list-models-partial-timeout.patch  pass-chat-template-kwargs.patch  preserve-custom-provider-hosted-tools.patch
bifrost-dynamic/policy-model-suffix/: go.mod  go.sum  main.go  main_test.go
codex-oauth-proxy/: Dockerfile  proxy-server.mjs
codex-oauth-proxy/tests/: fixtures.py  test_chat_reasoning_params.py  test_reasoning_continuity.py
codex-oauth-proxy/tests/data/: agent_workspace.txt  health-watch.md
docs/: CHANGELOG.md  NOTES.md
mcpproxy/: Dockerfile  entrypoint.sh
nemotron-asr/: .gitignore  Dockerfile  server.py
nemotron-asr/nemotron-asr-server/: Cargo.toml
nemotron-asr/nemotron-asr-server/src/: main.rs
openclaw/: Dockerfile  entrypoint.sh
openclaw/patches/: PATCHES.md  patch-export-session-assets.sh  patch-openclaw-bifrost-embeddings.mjs
sillytavern-bifrost-image-adapter/: Dockerfile  server.py  smoke_test.py
