[package]
name = "nemotron-asr-server"
version = "0.1.0"
edition = "2021"

[dependencies]
parakeet-rs = { version = "0.3", features = ["cuda"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
tempfile = "3"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
